should fix svg scaling issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -112,19 +112,15 @@ h2 {
 }
 
 #intro-logo {
-  all: unset;
-  width: 200px;
+  width: 100%;
   max-width: 200px; 
   transform: translateY(-200%);
   animation: slide 1.5s ease-out forwards;
   opacity: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 #main-logo {
-  width: 112px;
+  width: 100%;
   max-width: 112px; 
   margin-top: 3.5rem;
   cursor: pointer;
@@ -297,8 +293,4 @@ h2 {
 .task-li {
   width: 100%;
   max-width: 260px;
-}
-
-#welcome-overlay {
-  display: none; 
 }
